Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - It's now possible to declare an attribute as offering a wildcard property;
   such lookups now follow the same rules as other wildcard property lookups.
   The 'config.IConfigKey' interface has been changed to cleanly support
   implied keys at both registration and lookup time, so you can implement
   your own key types that work the way interfaces or property names do for
   configuration lookups.

 - The 'EigenRegistry' class has been moved from 'peak.util.EigenData' to
   'peak.config.registries', as it hasn't really been useful outside PEAK for
   a while now.

 - .ini files now support "smart property" objects ('config.ISmartProperty').
   If a property rule defined in an .ini file evaluates at runtime to an object
   that implements 'ISmartProperty', the object will be given a chance to
   compute a value for the property, in place of being used itself.  This helps
   to simplify definition of complex property rules in .ini files, by allowing
   the use of helper classes.  Also, 'naming.LinkRef' and 'naming.Reference'
   (indirectly) support this interface, so you can now use them in .ini files
   to refer to an object via the naming system.  (Previously, 'naming.LinkRef'
   wouldn't do the right thing unless the property was looked up via a
   'config:' URL, and 'naming.Reference' didn't exist.)

 - 'peak.util.imports.whenImported()' can now be used even when the specified
   module has already been loaded.

 - The naming system no longer has 'objectFactories' and 'stateFactories' as
   utilities; they have been replaced with new mechanisms involving adaptation.
   Previously, addresses had a 'retrieve()' method that could be used to
   retrieve the object defined by the address.  Now, to retrieve an object for
   an address, you must either define a context that processes the address, or