@@ -2,6 +2,12 @@ Fixes and Enhancements since Version 0.5 alpha 2
 
  Changed, Enhanced, or Newly Deprecated Features
 
+ - When creating a 'PropertyName()', it's now possible to force conversion of
+   invalid characters to '_', by supplying 'force=True'.  This doesn't address
+   syntactic issues (like having a non-terminating '*'), or character sets
+   (non-ASCII characters are still rejected).  But it's convenient for things
+   like filenames or text that might contain spaces.
+
  - It's now possible to declare an attribute as offering a wildcard property;
    such lookups now follow the same rules as other wildcard property lookups.
    The 'config.IConfigKey' interface has been changed to cleanly support
